@startuml
title Player Controller System

left to right direction
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 35
skinparam ranksep 45

package "Input Layer" {
  class PlayerController {
    - movement : Movement
    - facing : Facing2D
    - aimPivot : AimPivot2D
    - playerInput : PlayerInput
    - dodge : Dodge
    - rayInteract : RayInteract
    - holdingItem : HoldingItem
    - dir : Vector2
    - mainCamera : Camera
    + OnMove(context : InputAction.CallbackContext)
    + OnFire(context : InputAction.CallbackContext)
    + OnDodge(context : InputAction.CallbackContext)
    + OnInteract(context : InputAction.CallbackContext)
    + OnHoldItem(context : InputAction.CallbackContext)
    - Awake()
    - Update()
  }
}

package "Character Control" {
  class Movement {
    - moveSpeed : float = 5f
    - rb2d : Rigidbody2D
    - moveInput : Vector2
    + SetmoveInput(input : Vector2)
    + StopMovement()
    + SetMoveSpeed(newSpeed : float)
    + ResetMoveSpeed()
    + GetMoveSpeed() : float
    - Awake()
    - Start()
    - FixedUpdate()
  }

  class Facing2D {
    - faceRight : bool = true
    + IsFacingRight : bool
    + SetDirection(direction : float)
    - Flip()
  }

  class AimPivot2D {
    - aimPivot : Transform
    + SetDirection(direction : Vector2)
    + ResetRotation()
  }
}

package "Interaction / Combat" {
  class Dodge {
    + dodgeForce : float
    + cooldown : float
    + dodgeAnimation : AnimationClip
    + OnDodge : event Action
    + TryDodge()
  }

  class RayInteract {
    + searchRadius : float
    + itemLayer : LayerMask
    + FindClosestItem() : Transform
    + PickUp()
  }

  class HoldingItem {
    + HoldItem(value : int)
    + DropCurrentItem()
  }
}

package "Animation / Health" {
  class PlayerAnimations {
    - animator : Animator
    - dodge : Dodge
    + TriggerDodgeAnimation()
  }

  class Health {
    # maxHealth : float
    + CurrentHP : float
    + IsDead : bool
    + OnDead : event Action
    + OnHealthChanged : event Action<float>
    + TakeDamage(damage : float)
    + Kill()
  }

  class PlayerHealth {
    + Heal(amount : float)
  }
}

package "Unity / External" {
  class PlayerInput
  class "InputAction.CallbackContext" as CallbackContext
  class Camera
  class Mouse
  class Rigidbody2D
  class Transform
  class AnimationClip
  class Animator
}

PlayerHealth --|> Health
PlayerController --> Movement : move input
PlayerController --> Facing2D : face by dir.x
PlayerController --> AimPivot2D : aim direction
PlayerController --> PlayerInput : control scheme
PlayerController --> Dodge : dodge input
PlayerController --> RayInteract : interact
PlayerController --> HoldingItem : item scroll
PlayerController --> Camera : mouse to world
PlayerController --> CallbackContext : input callbacks
PlayerController --> Mouse : read mouse position

Movement --> Rigidbody2D : MovePosition()
AimPivot2D --> Transform : rotate pivot
PlayerAnimations --> Dodge : subscribe OnDodge
PlayerAnimations --> Animator : trigger "Dodge"

PlayerController -[hidden]right- Movement
Movement -[hidden]right- Facing2D
Facing2D -[hidden]down- AimPivot2D
AimPivot2D -[hidden]down- Dodge
Dodge -[hidden]right- RayInteract
RayInteract -[hidden]right- HoldingItem
PlayerAnimations -[hidden]down- PlayerHealth
Movement -[hidden]down- Camera
AimPivot2D -[hidden]right- Transform
Movement -[hidden]right- Rigidbody2D

note right of PlayerController
Main flow:
1. Read input callbacks from Input System
2. Send movement input to Movement
3. Choose aim source from mouse or stick
4. Update Facing2D and AimPivot2D
5. Trigger dodge, interact, and item switching
end note

note right of PlayerInput
Keyboard&Mouse:
- aim from mouse position

Gamepad:
- aim from OnFire stick input
end note

note bottom of Dodge
OnDodge event is used by PlayerAnimations
to play dodge animation when TryDodge succeeds.
end note

@enduml
